--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
                     love(socket);
                     break;
                     case "!feed":
+                      dropApple();
                       hunger(socket);
                       break;
                       case "!play":
@@ -26,6 +27,9 @@
                           case "!sleep":
                             tired(socket);
                             break;
+                            case "!health":
+                              currentHealth(socket);
+                              break;
                   }
                 })
               }
@@ -34,8 +38,32 @@
 
               const tamagotchi = { love: 0, hunger: 0, fun: 0, bath: 0, tired: 0 };
 
-                // Funktionen check kollar så att värdena som dom olika känslo funktionerna försöker lägga till inte överstiger 10 eller
-                // understiger 0 eftersom det är max och minimum
+                          function currentHealth(socket) {
+                              //let healthCheck = getValues();
+                              for (let [key, value] of Object.entries(tamagotchi)) {
+                                console.log(key, value);
+                              }
+                              socket.emit("messageFromTama", tamagotchi)
+                            }
+
+              function dropApple() {
+                let id = 0;
+                const appleElement = document.getElementById("apple");
+                let pos = 0;
+                clearInterval(id);
+                id = setInterval(frame, 5);
+                function frame() {
+                  if(pos === 1100) {
+                    clearInterval(id);
+                  }
+                  else {
+                    pos++;
+                    appleElement.style.top = pos + "px";
+                  }
+                }
+              }
+
+                // Function for checking so the values does not exceed 10 or goes under 0
                 function check(val, inc) {
                   var newval = val + inc;
                   if (newval > 10) {
@@ -51,7 +79,7 @@
                   return new Promise((r) => setTimeout(r, ms));
                 }
 
-                // Stoppar rörelsen och bilderna och visar tamahappy och startar sedan rörelsen igen
+                // Stops the movement of the movement images and shows the happy image and then restarts the movement
                 async function appreciation() {
                   stop();
                   var tama = document.getElementsByClassName("tamagotchi");
@@ -66,8 +94,7 @@
                   start();
                 }
 
-                // Funktionen goSleep  tar bort bilderna på snigeln och ändrar ljuset när man klickar på knappen sova eller när tröttheten automatiskt blir 0
-                // snigeln sover då en timme
+                // Function for removing image of the tamagotchi when it sleeps
                 async function goSleep(ms) {
                   stop();
                   var tama = document.getElementsByClassName("tamagotchi");
@@ -80,21 +107,16 @@
                   start();
                 }
 
-                // Funktionerna love, hunger, fun, bath och tired lägger till och tar bort värde ifrån objektet tamagotchi
-                //och kontaktar sedan getValues funktionen för att den ska uppdatera mätaren samtidigt som man klickar på någon av knapparna
-                function love(socket) {
+                // Functions love, hunger, fun, bath och tired ads and removes values from the tamagotchi
+                function love() {
                   tamagotchi.love = check(tamagotchi.love, 5);
-                                    socket.emit("messageFromTama", tamagotchi)
-                  getValues();
                   appreciation();
+                  currentHealth();
                 }
 
                 function hunger() {
                   tamagotchi.hunger = check(tamagotchi.hunger, 3);
                   tamagotchi.tired = check(tamagotchi.tired, -1);
-                                                      socket.emit("messageFromTama", tamagotchi)
-
-                  getValues();
                   appreciation();
                 }
 
@@ -104,17 +126,11 @@
                   tamagotchi.hunger = check(tamagotchi.hunger, -2);
                   tamagotchi.bath = check(tamagotchi.bath, -1);
                   tamagotchi.tired = check(tamagotchi.tired, -2);
-                                                      socket.emit("messageFromTama", tamagotchi)
-
-                  getValues();
                   appreciation();
                 }
 
                 function bath() {
                   tamagotchi.bath = check(tamagotchi.bath, 10);
-                                                      socket.emit("messageFromTama", tamagotchi)
-
-                  getValues();
                   appreciation();
                 }
 
@@ -122,12 +138,9 @@
                   goSleep(5000);
                   tamagotchi.tired = check(tamagotchi.tired, 10);
                   tamagotchi.hunger = check(tamagotchi.hunger, -5);
-                                                      socket.emit("messageFromTama", tamagotchi)
-
-                  getValues();
                 }
 
-                // Funktionen time tar bort värde ifrån objektet per timme
+                // Function for removing values from health with timer
                 function time() {
                   tamagotchi.love = check(tamagotchi.love, -2);
                   tamagotchi.hunger = check(tamagotchi.hunger, -1);
@@ -138,30 +151,12 @@
                     goSleep(36000);
                     tamagotchi.tired = 10;
                   }
-                  getValues();
                 }
                 setInterval(time, 360000);
 
-                // getValues funktionen är kopplad till känslofunktionerna , den summerar känslorna och uppdaterar mätaren när man klickar på knapparna
+                /*********  Movement   ******/
 
-                function getValues(love, hunger, fun, bath, tired) {
-
-                  var mood =
-                    tamagotchi.love +
-                    tamagotchi.hunger +
-                    tamagotchi.fun +
-                    tamagotchi.bath +
-                    tamagotchi.tired;
-                  console.log("love = " + tamagotchi.love,
-                    "hunger = " + tamagotchi.hunger +
-                    "fun = " + tamagotchi.fun +
-                    "bath = " + tamagotchi.bath +
-                    "tired = " + tamagotchi.tired);
-                }
-
-                /*********  RÖRELSE   ******/
-
-                // Funktionen tamaSlide loopar bilderna i tamagotchi klassen men visar bara dom 2 första för att det ska se ut som snigeln rör sig
+                // Function for looping the images in the tamagotchi class
                 var slideshow = 0;
 
                 function tamaSlide() {
@@ -196,7 +191,7 @@
                   }
                 }
 
-                // Funktionen flip gör att snigeln rör sig fram och tillbaka och flippar bilden så den går i rätt riktning
+                // Function for moving the tamagotchi and flipping the images so in moves in the right direction
                 var x = 50;
                 var riktning = "höger";
                 //const maxWidth = window.innerWidth;
@@ -210,7 +205,7 @@
                     element.style.transform = "scaleX(1)";
                   } else if (riktning == "vänster") {
                     x = x - 1;
-                    document.getElementById("tamaDiv").style.transform = "scaleX(-1)"; // flippar bilden för att snigeln ska gå i rätt riktning
+                    document.getElementById("tamaDiv").style.transform = "scaleX(-1)"; // flips the images
                   }
                   if (x == 1920) {
                     riktning = "vänster";
@@ -222,7 +217,7 @@
                 var tamaMove = setInterval(tamaSlide, 900);
                 var tamaFlip = setInterval(flip, 30);
 
-                // Startar och stoppar tamaMove och flip funktionerna
+                // Start and stops the tamaMove and flip functions
 
                 function stop() {
                   clearInterval(tamaMove);
@@ -238,6 +233,7 @@
 </head>
   <body>
     <div id="gamecontainer">
+      <div id="apple"><img src="Images/apple.png" /></div>
       <div id="tamaDiv">
         <div class="tamagotchi"><img src="Images/tama1png.png" /></div>
         <div class="tamagotchi"><img src="Images/tama2png.png" /></div>
